# zkm-prover

./: Cargo.toml  README.md  docker-compose.yml
proof-service/: Cargo.toml
proof-service/config/: config.toml  stage.toml
proof-service/examples/: README.md
proof-service/src/: prover_client.rs  prover_node.rs  prover_service.rs
proof-service/src/stage/: stage.rs  stage_service.rs  stage_worker.rs
proof-service/src/stage/tasks/: generate_task.rs  mod.rs  prove_task.rs  single_node_task.rs  snark_task.rs
proto/src/proto/include/v1/: includes.proto
proto/src/proto/prover/v1/: prover.proto
proto/src/proto/stage/v1/: stage.proto
prover/: Cargo.toml
prover/src/contexts/: snark_context.rs
prover_v2/: Cargo.toml
prover_v2/src/: agg_prover.rs  contexts.rs  executor.rs  lib.rs  pipeline.rs  root_prover.rs  single_node_prover.rs  snark_prover.rs
