[package]
name = "prover_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive", "rc"] }
tracing = "0.1.37"
bincode = "1.3.3"
anyhow = "1.0.97"
once_cell = "1.13.0"
zstd = "0.13.3"
lru = "0.14.0"

zkm-core-machine = { git = "https://github.com/ProjectZKM/Ziren", branch = "feat/prover" }
zkm-core-executor = { git = "https://github.com/ProjectZKM/Ziren", branch = "feat/prover" }
zkm-stark = { git = "https://github.com/ProjectZKM/Ziren", branch = "feat/prover" }
zkm-prover = { git = "https://github.com/ProjectZKM/Ziren", branch = "feat/prover" }
zkm-recursion-compiler = { git = "https://github.com/ProjectZKM/Ziren", branch = "feat/prover" }
zkm-recursion-core = { git = "https://github.com/ProjectZKM/Ziren", branch = "feat/prover" }
zkm-recursion-circuit = { git = "https://github.com/ProjectZKM/Ziren", branch = "feat/prover" }
zkm-sdk = { git = "https://github.com/ProjectZKM/Ziren", branch = "feat/prover" }

p3-maybe-rayon = { git = "https://github.com/ProjectZKM/Plonky3" }

common = { path = "../common" }
tempfile = "3.18.0"
lazy_static = "1.5.0"

[features]
debug = []